<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="active_games">Active games</string>
    <string name="age">Age</string>
    <string name="amount_of_games">{fa-gamepad} Amount of games</string>
    <string name="app_id">649165391811913</string>
    <string name="app_name">Space Crack</string>
    <string name="average_colonies">{fa-flag} Average amount of colonies per win</string>
    <string name="average_ships">{fa-rocket} Average amount of ships per win</string>
    <string name="avatar">Avatar</string>
    <string name="background">Background</string>
    <string name="birth_date">Birth date</string>
    <string name="busy">Busy</string>
    <string name="captured_all_planets">Captured all the planets!</string>
    <string name="chat">Chat</string>
    <string name="choose_opponent">Choose opponent</string>
    <string name="close_game">Close the game?</string>
    <string name="commandpoints">Commandpoints</string>
    <string name="commandpoints_fail">Too few commandpoints</string>
    <string name="contact">Contact</string>
    <string name="create_game">Create game</string>
    <string name="defeated">Defeated</string>
    <string name="edit">Edit</string>
    <string name="edited_failed">Edited failed</string>
    <string name="email">E-mail</string>
    <string name="email_register">E-mail already registered</string>
    <string name="email_sent">E-mail has been sent</string>
    <string name="email_sent_error">E-mail has not been sent</string>
    <string name="ended">Ended</string>
    <string name="facebook">Facebook</string>
    <string name="female">Female</string>
    <string name="fill_in_fields">Please fill in all the fields</string>
    <string name="first_name">First name</string>
    <string name="game_not_created">Game could not be created</string>
    <string name="game_not_found">No games could be found</string>
    <string name="game_not_loaded">Game could not be loaded</string>
    <string name="gender">Gender</string>
    <string name="general_settings">General settings</string>
    <string name="get_statistics">Getting statistics</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">{fa-info-circle} Help</string>
    <string name="help_active_playershiponplanet">- If the planet is occupied by a ship owned by the player, the two ships are combined into a new ship with a strength that is the sum of their strength.</string>
    <string name="help_attack_same_strength">- If you attack a colony or ship with the same strength as your attacking ship\'s strength, both of the pieces will be destroyed. When this piece was a colony, a planet will be again unoccupied.</string>
    <string name="help_build_ship">- Build a new ship at a planet they control</string>
    <string name="help_build_ship_commandpointscost">- Build a ship: 3</string>
    <string name="help_colonize_and_colonizecost">- When you have successfully moved a ship, you automatically colonize it, this has an extra cost of 1 command point.</string>
    <string name="help_commandpoints_costs">- Each action costs a specific amount of command point:</string>
    <string name="help_game_object">The object of the game is to destroy all of the opponents planets. On each turn, players are given a fixed number of command points and they can use those points to take several actions:</string>
    <string name="help_move_ship">- Move a ship from one planet to a neighboring planet</string>
    <string name="help_move_ship_commandpointscost">- Move a ship to a colony of the same player: 1</string>
    <string name="help_move_ship_colonize_commandpointscost">- Move a ship and colonize it: 2</string>
    <string name="help_move_ship_stories">When moving a ship, a number of things can happen:</string>
    <string name="help_opponent_stronger_player_ship_on_planet">- If the planet is occupied by an opposing ship with a higher strength than the player\'s attacking ship, the player\'s attacking ship is destroyed and the defending ship\'s size is reduced the size of the attacking ship.</string>
    <string name="help_opponent_weaker_player_ship_on_planet">- If the planet is occupied by an opposing ship with a lower strength than the player\'s ship, the defending ship is destroyed, the colony on the planet takes over the fight from the defending ship. If te ship\'s new reduced strength is higher than the colony strength, the ship\'s strength is reduced by the colony\'s strength and the player builds a colony on the planet.</string>
    <string name="help_take_over_clean_planet">- If the planet is unoccupied by a ship or colony, he takes control of the planet and builds a colony on it.</string>
    <string name="help_when_to_use_commandpoints">A player may make their moves at any time as long as they have the command points to do so. When all players have clicked the end turn button, the turn is ended and will receive new commandpoints.</string>
    <string name="help_win_condition">The game is played out until one of the players has no more colonies left, then the other player is won.</string>
    <string name="incredible_strategy_game">Incredible strategy game!</string>
    <string name="invited_games">Invited games</string>
    <string name="invitation">Invitation</string>
    <string name="invitation_accepted">Invitation accepted</string>
    <string name="join_game">Would you like to join the game?</string>
    <string name="last_name">Last name</string>
    <string name="loading">Loading</string>
    <string name="lobby">Lobby</string>
    <string name="lobby_icon">{fa-rocket} Lobby</string>
    <string name="login">Login</string>
    <string name="logging_in">Logging in</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="login_fail">Login failed</string>
    <string name="login_succes">Login succeeded</string>
    <string name="logout">Log out</string>
    <string name="lost_all_planets">Lost all planets</string>
    <string name="male">Male</string>
    <string name="moves">Moves</string>
    <string name="multitouch_support">Your device does not support multi touch</string>
    <string name="name_of_game">Name of game</string>
    <string name="new_game">New game</string>
    <string name="new_game_icon">{fa-play} New game</string>
    <string name="new_message">New message from </string>
    <string name="new_password">New password</string>
    <string name="no">No</string>
    <string name="no_connection">No internet connection</string>
    <string name="no_games">No games found</string>
    <string name="no_users">No users found</string>
    <string name="not_available">Not availiable</string>
    <string name="notifications">Notifitcations</string>
    <string name="notifications_enable">Enable notifications</string>
    <string name="object">Object</string>
    <string name="old_password">Old password</string>
    <string name="opponent">Opponent</string>
    <string name="password">Password</string>
    <string name="password_error">Password not saved</string>
    <string name="password_match">Passwords must match</string>
    <string name="password_saved">Password saved</string>
    <string name="pending_requests">Pending requests</string>
    <string name="play_a_game">Come join me in a battle of Space Crack!</string>
    <string name="player1_turn">Player 1 its turn</string>
    <string name="player2_turn">Player 2 its turn</string>
    <string name="please_wait">Please wait</string>
    <string name="processing_data">Processing data</string>
    <string name="profile">Profile</string>
    <string name="profile_edited">Profile edited</string>
    <string name="profile_fail">Profile could not be loaded</string>
    <string name="profile_not_available">Profile not available</string>
    <string name="profile_not_setup">Your profile is not setup yet</string>
    <string name="random">Random</string>
    <string name="recent">Recent</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="registering">Registering</string>
    <string name="register_fail">Registration failed</string>
    <string name="register_succes">Registration succeeded, a verification code has been sent to your e-mail address</string>
    <string name="replays">Replays</string>
    <string name="replays_icon">{fa-repeat} Replays</string>
    <string name="retrieving_games">Retrieving games</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_users">Search for users</string>
    <string name="send_email">Send invitation email to this e-mailaddress?</string>
    <string name="share_via">Share via</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_icon">{fa-trophy} Statistics</string>
    <string name="symbols_not_allowed">Symbols are not allowed in the game\'s name</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="turn_ended">Turn ended</string>
    <string name="user_fail">User could not be loaded</string>
    <string name="user_not_found">User could not be found</string>
    <string name="username">Username</string>
    <string name="valid_email_error">Please enter a valid email address</string>
    <string name="victory">Victory!</string>
    <string name="welcome">Welcome!</string>
    <string name="win_ratio">{fa-trophy} Win ratio</string>
    <string name="yes">Yes</string>
    <string name="you_lost">You lost</string>
    <string name="you_won">You won!</string>
    <string name="your_turn">Your turn</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_aidl">AidlActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="verify">verify</string>
    <string name="invalid_verification_token">Invalid verification token!</string>
    <string name="unexpected_error">An unexpected error occurred!</string>
    <string name="invalid_registration_fieldcontents">Your registration was refused, some fields were invalid.</string>
    <string name="username_or_email_conflict">The username or e-mail is already in use.</string>
    <string name="verification_code">Verification code</string>

</resources>
