<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gunit.spacecrack.activity.LoginActivity$PlaceholderFragment">

    <include layout="@layout/background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/edt_login_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:password="true"
            android:id="@+id/edt_login_password"
            android:hint="@string/password"/>

        <Button
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login_login"
            android:text="@string/login"/>

        <Button
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login_register"
            android:text="@string/register"/>

        <com.facebook.widget.LoginButton
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login_facebook"/>

    </LinearLayout>

</FrameLayout>
