<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.gunit.spacecrack.HomeActivity$PlaceholderFragment">

    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:src="@drawable/spacebackground"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:contentDescription="@string/background" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:id="@+id/llt_home_profile">

        <com.facebook.widget.ProfilePictureView
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:id="@+id/ppv_home_fbpicture"
            android:visibility="gone" />

        <ImageView
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:scaleType="centerCrop"
            android:id="@+id/img_home_profilepicture"
            android:src="@drawable/ic_contact_picture"
            android:contentDescription="@string/avatar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:id="@+id/txt_home_welcome"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_large"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_below="@+id/llt_home_profile"
        android:gravity="center">

        <Button
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:id="@+id/btn_home_newgame"
            android:text="@string/new_game"
            android:enabled="false"/>

        <Button
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:id="@+id/btn_home_activegames"
            android:text="@string/active_games"
            android:enabled="false"/>

        <Button
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:id="@+id/btn_home_statistics"
            android:text="@string/statistics"
            android:enabled="false"/>

        <Button
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:id="@+id/btn_home_replay"
            android:text="@string/replays"
            android:enabled="false"/>

    </LinearLayout>

</RelativeLayout>
