<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gunit.spacecrack.GameActivity$PlaceholderFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/spacebackground"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/default_size"
            android:layout_height="@dimen/default_size"
            android:scaleType="centerCrop"
            android:id="@+id/img_edit_profile_profilepicture"
            android:src="@drawable/ic_contact_picture"/>

        <EditText
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:id="@+id/edt_profile_first_name"
            android:hint="@string/first_name"/>

        <EditText
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:id="@+id/edt_profile_last_name"
            android:hint="@string/last_name"/>

        <Button
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:id="@+id/btn_profile_date"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:id="@+id/btn_profile_save"
            android:text="@string/save"/>

    </LinearLayout>

</RelativeLayout>
