<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gunit.spacecrack.activity.LoginActivity$PlaceholderFragment">

    <include layout="@layout/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/edt_newgame_gamename"
            android:inputType="textEmailAddress"
            android:hint="@string/name_of_game" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:singleLine="true"
                android:id="@+id/edt_newgame_opponent"
                android:hint="@string/opponent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_newgame_search"
                android:text="@string/search" />

        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_size"
            android:id="@+id/lst_newgame_users" />

        <Button
            android:layout_width="@dimen/default_size"
            android:layout_height="wrap_content"
            android:id="@+id/btn_newgame_create"
            android:text="@string/create_game" />

    </LinearLayout>

</FrameLayout>
