<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/edt_password_oldpassword"
            android:inputType="textPassword"
            android:hint="@string/old_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:password="true"
            android:id="@+id/edt_password_newpassword"
            android:inputType="textPassword"
            android:hint="@string/new_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:password="true"
            android:id="@+id/edt_password_repeatpassword"
            android:inputType="textPassword"
            android:hint="@string/repeat_password"/>

        <IconButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/btn_password_save"
            android:text="{fa-floppy-o}"/>

    </LinearLayout>

</FrameLayout>
